<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  -->
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>

    <!--  -->

    <string name="app_name">IGRound</string>
    <string name="action_settings">Settings</string>
    <string name="positive"><b>A Positive, NON-Violent</b></string>
    <string name="approach"><b>Approach to Parenting</b></string>
    <string name="ground">Ground: verb refuse to allow a child a</string>
    <string name="certain">certain privilege especially social</string>
    <string name="create_Account">Create account</string>
    <string name="sign_In">Sign In</string>
    <string name="signGoogle">Sign in with Google</string>
    <string name="fbSignIn">Sign in with Facebook</string>
    <string name="cborn">Born Again Technology © 2014</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="create_title"><b>Create Account</b></string>
    <string name="login_title"><b>Sign In</b></string>
    <string name="ffName_hint">Father\'s First Name</string>
    <string name="flName_hint">Father\'s Last Name</string>
    <string name="mfName_hint">Mother\'s First Name</string>
    <string name="mlName_hint">Mother\'s Last Name</string>
    <string name="street_hint">Street Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_hint">Zip</string>
    <string name="homePhone_hint">Home Phone</string>
    <string name="officePhone_hint">Office Phone</string>
    <string name="email_hint">Email Address</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="info_hint">Please do not share my information with relevant perenting partners</string>
    <string name="submit_text"><b>Submit</b></string>
    <string name="userName_hint">User Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_buuton_text"><b>Login</b></string>
    <string name="remember_button_text"><b>Remember me</b></string>
    <string name="home_title"><b>Home</b></string>
    <string name="addChild"> Add Child</string>
    <string name="groundChild">Ground Child</string>
    <string name="viewConseq"> View Consequences</string>
    <string name="addchild_title"><b>Add Child</b></string>
    <string name="viewconseq_title"><b> Consequences</b></string>
    <string name="deletechild_title"><b>Delete Child</b></string>
    <string name="groundChild_title"><b>Ground Child</b></string>
    <string name="viewConseq_title"><b>View Consequences</b></string>
    <string name="app_id">717249608354920</string>
    <string name="childfname_hint">Child\'s First Name</string>
    <string name="childlname_hint">Child\'s Last Name</string>
    <string name="child_bday_text">Child\'s Birthday:</string>
    <string name="deleteChild_title"><b>Delete Child</b></string>
    <string name="groundchild_title"><b>Ground Child</b></string>
    <string name="datetime_hint">Current Date  Time</string>
    <string name="conseqend">Consequence will End On</string>
    <string name="continue_conseq">Continue To Consequence </string>
    <string name="thank_title">Thank You</string>
    <string name="deleteChild">Delete Child</string>
    <string name="addConsq_title"><b>Add Consequence</b></string>
    <string name="coseq_hint">Consequence Name</string>

    <string-array name="month">
        <item>            Month</item>
        <item>            Jan</item>
        <item>            Feb</item>
        <item>            March</item>
        <item>            April</item>
        <item>            May</item>
        <item>            June</item>
        <item>            July</item>
        <item>            Aug</item>
        <item>            Sept</item>
        <item>            Oct</item>
        <item>            Nov</item>
        <item>            Dec</item>
    </string-array>
    <string-array name="day">
        <item>            Day</item>
        <item>            1</item>
        <item>            2</item>
        <item>            3</item>
        <item>            4</item>
        <item>            5</item>
        <item>            6</item>
        <item>            7</item>
        <item>            8</item>
        <item>            9</item>
        <item>            10</item>
        <item>            11</item>
        <item>            12</item>
        <item>            13</item>
        <item>            14</item>
        <item>            15</item>
        <item>            16</item>
        <item>            17</item>
        <item>            18</item>
        <item>            19</item>
        <item>            20</item>
        <item>            21</item>
        <item>            22</item>
        <item>            23</item>
        <item>            24</item>
        <item>            25</item>
        <item>            26</item>
        <item>            27</item>
        <item>            28</item>
        <item>            29 </item>
        <item>            30</item>
        <item>            31</item>
    </string-array>
    <string-array name="gender">
        <item>      Sex</item>
        <item>      Male</item>
        <item>      Female</item>
    </string-array>

    <string name="choose">Choose Image</string>
    <string name="add_Conseq">Add Consequence</string>
    <string name="conseqGrid_title"><b>Consequences</b></string>
    <string name="conseq_time">Consequence End Time</string>
    <string name="conseq_date">Consequence End Date</string>

</resources>